--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Keno Tracker</string>
+    <style name="Theme.KenoTracker" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">#1A1A2E</item>
+        <item name="android:navigationBarColor">#252540</item>
+    </style>
 </resources>
