--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
@@ -5,11 +6,7 @@
     android:viewportHeight="108">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M54,36L54,72M36,54L72,54M42,42L66,66M66,42L42,66"/>
-    <path
-        android:fillColor="#FFFFFF"
         android:pathData="M54,30 A24,24 0 1,1 54,78 A24,24 0 1,1 54,30"
         android:strokeWidth="4"
-        android:strokeColor="#FFFFFF"
-        android:fillType="evenOdd"/>
+        android:strokeColor="#FFFFFF"/>
 </vector>
